Refactor code to reflect latest changes in JDK 19 preview