@@ -1,10 +1,10 @@
 package de.hhu.bsinfo.infinileap.benchmark.message;
 
 import de.hhu.bsinfo.infinileap.common.util.NativeObject;
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.ValueLayout;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.ValueLayout;
 
 import java.lang.invoke.VarHandle;
 
@@ -49,11 +49,11 @@ public class BenchmarkDetails extends NativeObject {
             LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("bench_mode"));
 
     public BenchmarkDetails() {
-        this(ResourceScope.newImplicitScope());
+        this(MemorySession.openImplicit());
     }
 
-    public BenchmarkDetails(ResourceScope scope) {
-        super(MemorySegment.allocateNative(LAYOUT, scope));
+    public BenchmarkDetails(MemorySession session) {
+        super(MemorySegment.allocateNative(LAYOUT, session));
     }
 
     public void setBufferSize(long size) {
