@@ -1,10 +1,10 @@
 package de.hhu.bsinfo.infinileap.benchmark.message;
 
 import de.hhu.bsinfo.infinileap.common.util.NativeObject;
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.ValueLayout;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.ValueLayout;
 
 import java.lang.invoke.VarHandle;
 import java.util.Arrays;
@@ -49,19 +49,19 @@ public class BenchmarkInstruction extends NativeObject {
             LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("op_code"));
 
     public BenchmarkInstruction() {
-        this(ResourceScope.newImplicitScope());
+        this(MemorySession.openImplicit());
     }
 
-    public BenchmarkInstruction(ResourceScope scope) {
-        super(MemorySegment.allocateNative(LAYOUT, scope));
+    public BenchmarkInstruction(MemorySession session) {
+        super(MemorySegment.allocateNative(LAYOUT, session));
     }
 
     public BenchmarkInstruction(OpCode opCode) {
-        this(opCode, ResourceScope.newImplicitScope());
+        this(opCode, MemorySession.openImplicit());
     }
 
-    public BenchmarkInstruction(OpCode operation, ResourceScope scope) {
-        super(MemorySegment.allocateNative(LAYOUT, scope));
+    public BenchmarkInstruction(OpCode operation, MemorySession session) {
+        super(MemorySegment.allocateNative(LAYOUT, session));
         setOperation(operation);
     }
 
