@@ -1,21 +1,20 @@
 package de.hhu.bsinfo.infinileap.binding;
 
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.NativeSymbol;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 import org.openucx.ucp_listener_conn_callback_t;
 
 public abstract class ConnectionHandler {
 
-    private final NativeSymbol upcallSymbol;
+    private final MemorySegment upcallSymbol;
 
     private final ucp_listener_conn_callback_t callback = (request, data) -> {
         onConnection(ConnectionRequest.of(request, data.toRawLongValue()));
     };
 
     public ConnectionHandler() {
-        this.upcallSymbol = ucp_listener_conn_callback_t.allocate(callback, ResourceScope.newImplicitScope());
+        this.upcallSymbol = ucp_listener_conn_callback_t.allocate(callback, MemorySession.openImplicit());
     }
 
     public MemoryAddress upcallAddress() {
