@@ -3,10 +3,10 @@ package de.hhu.bsinfo.infinileap.binding;
 import de.hhu.bsinfo.infinileap.common.util.BitMask;
 import de.hhu.bsinfo.infinileap.common.network.NativeInetSocketAddress;
 import de.hhu.bsinfo.infinileap.common.util.flag.LongFlag;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.ValueLayout;
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.ValueLayout;
 import org.openucx.ucp_conn_request_attr_t;
 import org.unix.sockaddr_in;
 import org.unix.sockaddr_in6;
@@ -74,7 +74,7 @@ public class ConnectionRequest {
 
     private MemorySegment queryAttributes(Field... fields) throws ControlException {
         // Allocate attributes struct and set requested fields
-        var request_attr = ucp_conn_request_attr_t.allocate(ResourceScope.newImplicitScope());
+        var request_attr = ucp_conn_request_attr_t.allocate(MemorySession.openImplicit());
         ucp_conn_request_attr_t.field_mask$set(request_attr, BitMask.longOf(fields));
 
         // Query requested fields
