@@ -3,7 +3,7 @@ package de.hhu.bsinfo.infinileap.binding;
 import de.hhu.bsinfo.infinileap.common.util.NativeObject;
 import de.hhu.bsinfo.infinileap.common.util.BitMask;
 import de.hhu.bsinfo.infinileap.common.util.flag.LongFlag;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.MemorySession;
 import org.openucx.*;
 
 import java.util.Set;
@@ -16,11 +16,11 @@ public class ContextParameters extends NativeObject {
     private static final int MULTITHREADING_ON = 1;
 
     public ContextParameters() {
-        this(ResourceScope.newImplicitScope());
+        this(MemorySession.openImplicit());
     }
 
-    public ContextParameters(ResourceScope scope) {
-        super(ucp_params_t.allocate(scope));
+    public ContextParameters(MemorySession session) {
+        super(ucp_params_t.allocate(session));
     }
 
     public long getFeatures() {
