@@ -3,7 +3,7 @@ package de.hhu.bsinfo.infinileap.binding;
 import de.hhu.bsinfo.infinileap.common.util.NativeObject;
 import de.hhu.bsinfo.infinileap.common.util.BitMask;
 import de.hhu.bsinfo.infinileap.common.util.flag.LongFlag;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.MemorySession;
 import org.openucx.*;
 
 import static org.openucx.OpenUcx.*;
@@ -13,11 +13,11 @@ import static org.openucx.OpenUcx.UCP_WORKER_PARAM_FIELD_EVENTS;
 public class WorkerParameters extends NativeObject {
 
     public WorkerParameters() {
-        this(ResourceScope.newImplicitScope());
+        this(MemorySession.openImplicit());
     }
 
-    public WorkerParameters(ResourceScope scope) {
-        super(ucp_worker_params_t.allocate(scope));
+    public WorkerParameters(MemorySession session) {
+        super(ucp_worker_params_t.allocate(session));
     }
 
     public WorkerParameters setThreadMode(ThreadMode threadMode) {
