@@ -1,24 +1,24 @@
 package de.hhu.bsinfo.infinileap.primitive;
 
 import de.hhu.bsinfo.infinileap.binding.DataType;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.ValueLayout;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.ValueLayout;
 
 public final class NativeDouble extends NativePrimitive {
 
     private static final int SIZE = Double.BYTES;
 
     public NativeDouble() {
-        this(ResourceScope.newImplicitScope());
+        this(MemorySession.openImplicit());
     }
 
-    public NativeDouble(ResourceScope scope) {
-        this(0.0, scope);
+    public NativeDouble(MemorySession session) {
+        this(0.0, session);
     }
 
-    public NativeDouble(double initialValue, ResourceScope scope) {
-        super(MemorySegment.allocateNative(SIZE, scope), DataType.CONTIGUOUS_64_BIT);
+    public NativeDouble(double initialValue, MemorySession session) {
+        super(MemorySegment.allocateNative(SIZE, session), DataType.CONTIGUOUS_64_BIT);
         set(initialValue);
     }
 
